3.2.0
* Add support for Rails 6.0 [Stefan Andersen](https://github.com/stfnndrsn) and [Damian Legawiec](https://github.com/damianlegawiec) and [Jonathan Tapia](https://github.com/jtapia) and [Alex](https://github.com/a-ta-ta)
* [Compare to 3.1.4](https://github.com/collectiveidea/awesome_nested_set/compare/v3.1.4...v3.2.0)

3.1.4
* Add support for Rails 5.2 [John Hawthorn](https://github.com/jhawthorn) and [marocchino](https://github.com/marocchino)
* [Compare to 3.1.3](https://github.com/collectiveidea/awesome_nested_set/compare/v3.1.3...v3.1.4)

3.1.3
* Add support for Rails 5.1 [John Hawthorn](https://github.com/jhawthorn)
* [Compare to 3.1.2](https://github.com/collectiveidea/awesome_nested_set/compare/v3.1.2...v3.1.3)

3.1.2
* Make belongs_to relation optional again [Jan Matusz](https://marahin.pl/)
* [Compare to 3.0.0](https://github.com/collectiveidea/awesome_nested_set/compare/v3.1.1...v3.1.2)

3.1.1
* Fix a reloading bug when using default scope [Krzysztof Rybka](https://github.com/krzysiek1507)
* [Compare to 3.1.0](https://github.com/collectiveidea/awesome_nested_set/compare/v3.1.0...v3.1.1)

3.1.0
* Ensure that nested_set queries respect the model's default_scope. [oesgalha](https://github.com/oesgalha)
* Add Rails 5 support [Krzysztof Rybka](https://github.com/krzysiek1507)
* Drop support for ruby 1.9.3 [Krzysztof Rybka](https://github.com/krzysiek1507)
* Fix .all_roots_valid? method when model is ordered by default [Adam Hodowany](https://github.com/hodak)
* Reuse the current model's connection when available [Tim Bugai] [#322](https://github.com/collectiveidea/awesome_nested_set/pull/322)
* [Compare to 3.0.3](https://github.com/collectiveidea/awesome_nested_set/compare/v3.0.3...v3.1.0)

3.0.3
* Add :nullify option to :dependent functionality to orphan children rather
than destroy them.
* [Compare to 3.0.2](https://github.com/collectiveidea/awesome_nested_set/compare/v3.0.2...v3.0.3)

3.0.2